--- a/adrin/package.json
+++ b/adrin/package.json
@@ -9,12 +9,14 @@
   "author": "Romashchenko Pavel (GreenOwl)",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.3",
     "cron": "^1.1.1",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "morgan": "^1.7.0",
+    "request": "^2.79.0",
     "serve-favicon": "^2.3.0",
     "winston": "^2.3.0"
   }
