--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple it news server",
   "main": "adrin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm test"
   },
   "repository": {
     "type": "git",
