--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple it news server",
   "main": "adrin.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
