change package.json #2

--- a/adrin/package.json
+++ b/adrin/package.json
@@ -4,7 +4,8 @@
   "description": "Simple it news server",
   "main": "adrin.js",
   "scripts": {
-    "test": "mocha"
+    "travis-lint": ".travis.yml",
+    "test": "npm test adrin/test/weather.js"
   },
   "repository": {
     "type": "git",
