change package.json #3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 sudo: false
 language: node_js
+script: [
+    "travis-lint .travis.yml",
+    "npm test",
+    "make codeclimate"
+]
 node_js:
   - "6"
   - "6.1"
