Add mongodb manager

--- a/adrin/package.json
+++ b/adrin/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^16.1.0",
     "jade": "^1.11.0",
     "mocha": "^3.2.0",
+    "mongodb": "^2.2.24",
     "morgan": "^1.7.0",
     "nodemailer": "^3.0.0",
     "nodemailer-smtp-transport": "^2.7.2",
